--- a/Web.html
+++ b/Web.html
@@ -26,6 +26,9 @@
             <button class="btn btn-sm">Search</button>
         </div>
     </nav>
+    <marquee>
+     <!-- contents -->
+</marquee>
 
     <section class="firstsection">
         <div class="box-main">
